packages/parser/test/tokenizer/E0003.txt
"
===== err =====
/test/tokenizer/E0003.txt:1:1: SyntaxError: E0003 - Unterminated string literal
1 | "
  | ^
